--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "devDependencies": {
     "browserify": "^16.5.1",
     "pica": "^5.1.0",
-    "ipfs": "^0.43.3",
-    "ipld": "^0.26.2"
+    "ipfs": "^0.43.3"
   },
   "browser": "basquiatJS/src/index.html",
   "dependencies": {
