Add API documentation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npm run bundle && npm run release",
     "clean": "rm -rf dist/bundle.js",
     "release": "npm run clean && npm run bundle && ipfs add -Qr dist | xargs printf 'http://localhost:8080/ipfs/%s\n",
-    "debug-release": "npm run clean && npm run debug-bundle && ipfs add -Qr dist | xargs printf 'http://localhost:8080/ipfs/%s\n'"
+    "debug-release": "npm run clean && npm run debug-bundle && ipfs add -Qr dist | xargs printf 'http://localhost:8080/ipfs/%s\n'",
+    "api_doc": "jsdoc2md src/lib.js > api.md"
   },
   "devDependencies": {
     "browserify": "^16.5.1"
